Import of CHRWIN/Acme-PIA-Export-0.017 from CPAN.
gitpan-cpan-distribution: Acme-PIA-Export
gitpan-cpan-version:      0.017
gitpan-cpan-path:         CHRWIN/acme-pia-export/Acme-PIA-Export-0.017.tar.gz
gitpan-cpan-author:       CHRWIN
gitpan-cpan-maturity:     released

--- a/Acme-PIA-Export-0.017.html
+++ b/Acme-PIA-Export-0.017.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>ACME::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</title>
+<title>Acme::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</title>
 <link rev="made" href="mailto:" />
 </head>
 
 <body style="background-color: white">
 <table border="0" width="100%" cellspacing="0" cellpadding="3">
 <tr><td class="block" style="background-color: #cccccc" valign="middle">
-<big><strong><span class="block">&nbsp;ACME::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</span></strong></big>
+<big><strong><span class="block">&nbsp;Acme::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</span></strong></big>
 </td></tr>
 </table>
 
@@ -37,7 +37,7 @@
 </p>
 <hr />
 <h1><a name="name">NAME</a></h1>
-<p>ACME::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</p>
+<p>Acme::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</p>
 <p>
 </p>
 <hr />
@@ -51,9 +51,9 @@ as hashes.</p>
 </p>
 <h2><a name="example">EXAMPLE</a></h2>
 <pre>
-        use ACME::PIA::Export;</pre>
+        use Acme::PIA::Export;</pre>
 <pre>
-        my $pia = ACME::PIA::Export-&gt;new(</pre>
+        my $pia = Acme::PIA::Export-&gt;new(</pre>
 <pre>
                 &quot;username&quot; =&gt; &quot;mylogin&quot;,
                 &quot;password&quot; =&gt; &quot;verysecret&quot;</pre>
@@ -76,7 +76,7 @@ as hashes.</p>
 <dt><strong><a name="item_new">new( [ key =&gt; value, ...] )</a></strong><br />
 </dt>
 <dd>
-Creates and returns a new ACME::PIA::Export object.
+Creates and returns a new Acme::PIA::Export object.
 </dd>
 <dd>
 <p>Parameters are given as key =&gt; value pairs. The most commonly used are ``username'' and ``password''.
@@ -88,7 +88,7 @@ to get verbose output from all functions.</p>
 </dt>
 <dd>
 Export all objects for the given scope (contacts, calendar etc.) and stores them in the
-ACME::PIA::Export object.
+Acme::PIA::Export object.
 </dd>
 <dd>
 <p>ATTENTION: Only ``contacts'' scope is implemented up to now! Look out for future releases.</p>
@@ -164,7 +164,7 @@ Perl version. You can read it at <a href="http://www.perl.org">http://www.perl.o
 <p>Please report those to the author.</p>
 <table border="0" width="100%" cellspacing="0" cellpadding="3">
 <tr><td class="block" style="background-color: #cccccc" valign="middle">
-<big><strong><span class="block">&nbsp;ACME::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</span></strong></big>
+<big><strong><span class="block">&nbsp;Acme::PIA::Export - Export contacts, calendars or todos from Arcor's PIA messaging</span></strong></big>
 </td></tr>
 </table>
 
